# llegos

./: .gitignore  .tool-versions  README.md  pyproject.toml
dao_agent/: agent.py
dao_agent/adapters/: langchain.py  test_langchain.py
dao_agent/agents/: dao.py
essays/: 09_07_2023.md
essays/01_09_2024_launch/: blog.md  tweets.md
examples/: README.md  actor.py  agents.py  asyncio.py  contract_net.py  neural_net_analogues.py  openai.py  openai_functions.py  pure.py  quickstart.py  typed_messages.py  typed_messaging.py
gen_net/: abstract.py  agents.py  messages.py  openai.py  redis.py  sync.py  test_api.py  test_message.py  test_node.py  test_openai.py  types.py
gen_net/legos/: actors.py  networks.py
gen_net/legos/csp/: channels.py
gen_net/legos/fipa/: contract_net.py
gen_net/llegos/: __init__.py  actors.py  asyncio.py  conversation.py  conversations.py  csp.py  messages.py  networks.py  openai.py  redis.py  sync.py  test_openai.py
gen_net/llegos/csp/: channels.py
gen_net/llegos/fipa/: contract_net.py  test_contract_net.py
gpt_net/: abstract.py  actor_node.py  async_node.py  console.py  message.py  node.py  openai.py  test_message.py  test_openai.py  types.py
llambdao/: __init__.py  abstract.py  actor.py  agent.py  asyncio.py  base.py  console.py  dao.py  goal.py  harmoni.py  helpers.py  langchain.py  message.py  openai.py  ray.py  server.py  starter.py  sync.py  test___init__.py  test_asyncio.py  test_base.py  test_goal.py  test_langchain.py  test_message.py  test_openai.py  test_sync.py  types.py
llambdao/abc/: __init__.py  actor.py  asyncio.py
llambdao/abc/agents/: boid.py
llambdao/adapters/: langchain.py  test_langchain.py
llambdao/agent/: zen.py
llambdao/agents/boid/: __init__.py
llambdao/consciousness/: boid.py  zen.py
llambdao/examples/: actor.py  asyncio.py  openai.py  philosophers.py  pure.py
llambdao/node/: __init__.py  actor.py  asyncio.py  behavioral.py  sync.py  test_asyncio.py  test_sync.py
llambdao/node/structures/: boid.py
llambdao/recipes/: __init__.py  async.py
llegos/: actors.py  asyncio.py  cognition.py  communication.py  conftest.py  contexts.py  conversations.py  csp.py  cursive.py  dev.py  development.py  dialog.py  durable.py  ephemeral.py  functional.py  logger.py  messages.py  networks.py  openai.py  persistence.py  reinforcement.py  research.py  roles.py  test_actors.py  test_asyncio.py  test_ephemeral.py  test_functional.py  test_helpers.py  test_messages.py  test_mocks.py  test_openai.py  test_research.py  test_utilities.py
llegos/abc/cognitive/: reinforcement.py
llegos/abc/collaborative/: contract_net.py
llegos/asyncio/: event_emitter.py
llegos/cognitive/: lecun.py  reinforcement.py
llegos/cognitive/abstract/: reinforcement.py
llegos/collab/: contract_net.py  dialog.py  knowledge.py  test_contract_net.py
llegos/collaboration/: dialog.py
llegos/collaborative/: board.py  cafe.py  contract_net.py  dialog.py  knowledge.py  pairwise.py  philosophy.py  test_contract_net.py  test_dialog.py  writing.py
llegos/collaborative/abstract/: contract_net.py  pairwise.py
llegos/collaborative/plays/: board.py  philosophy.py  tweeter.py  writing.py
llegos/collaborative/research/: board.py  cafe.py  philosophy.py  tweeter.py  writing.py
llegos/fipa/: contract_net.py  test_contract_net.py
llm_net/: abstract.py  actor.py  asyncio.py  base.py  experimental.py  gen.py  gen_actor.py  gen_async.py  message.py  openai.py  redis.py  test_api.py  test_message.py  test_node.py  test_openai.py  types.py
llm_net/actor/: gen.py
llm_net/asyncio/: gen.py
llm_net/dao/: network.py
llm_net/experimental/: network.py
llm_net/networks/: base.py
research/: snoop.ipynb
tests/: conftest.py  test_0_dev.py  test_0_research.py  test_10_ray.py  test_11_development.py  test_1_dialogue.py  test_1_map_reduce.py  test_2_human_console.py  test_3_debate.py  test_3_dialogue.py  test_4_debate.py  test_4_map_reduce.py  test_5_contract_net.py  test_5_human_console.py  test_6_inner_critic.py  test_7_student_teacher.py  test_8_reflexion.py  test_9_crewai.py  test_functional.py  test_research.py
