[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.poetry]
name = "llm-net"
version = "0.1.0"
description = "..."
authors = ["Shaman AI <hello@shaman.ai>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "llm_net" }]

[tool.poetry.dependencies]
python = ">=3.10.9,<4.0"
pydantic = ">=1,<2"
sorcery = "^0.2.2"
llama_index = "^0.7"
networkx = "^3.1"
openai = "^0.27"
ijson = "^3.2.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
faiss-cpu = "^1.7.4"
ipdb = "^0.13.13"
ipython = "^8.12.0"
jupyter = "^1.0.0"
mypy = "^1.2.0"
pytest = "^7.3.1"
python-dotenv = "^1.0.0"
ruff = "^0.0.261"
setuptools = "^67.6.1"
streamlit = "^1.24"
types-pyyaml = "^6.0.12.9"
wikipedia = "^1.4.0"
tiktoken = "^0.4.0"
pytest-asyncio = "^0.21.0"
pyee = "^11.0.0"
agent_actors = { git = "https://github.com/shaman-ai/agent-actors.git", branch = "main" }
supabase = "^1.0.3"
fastapi = "^0.100.0"
upstash-redis = "^0.15.0"
websockets = ">=10.3,<11.0"
redis-om = "^0.2.1"

[tool.poetry.group.ray]
optional = true

[tool.poetry.group.ray.dependencies]
ray = "^2.4.0"

[tool.poetry.group.async]
optional = true

[tool.poetry.group.async.dependencies]
httpx = ">=0.23"
trio = "^0.22.0"
