[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.poetry]
name = "llegos"
version = "0.1.0"
description = "Llegos for building Python Agents"
authors = ["Shaman AI <hello@shaman.ai>"]
license = "LGPLv3"
readme = "README.md"
packages = [{ include = "llegos" }]

[tool.poetry.dependencies]
python = ">=3.10.9,<3.12"
pydantic = ">=1,<2.1"
sorcery = "^0.2.2"
networkx = "^3.1"
openai = "^0.27"
ijson = "^3.2.2"
janus = "^1.0.0"
aiometer = "^0.4.0"
sqlmodel = "^0.0.8"
python-statemachine = "^2.1.0"
beartype = "^0.15.0"
deepmerge = "^1.1.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
faiss-cpu = "^1.7.4"
fastapi = "^0.100.0"
httpx = ">=0.23"
ipdb = "^0.13.13"
ipython = "^8.12.0"
jupyter = "^1.0.0"
llama_index = ">=0.5"
mypy = "^1.2.0"
pyee = "^11.0.0"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
python-dotenv = "^1.0.0"
ray = "^2.6.0"
redis-om = "^0.2.1"
ruff = "^0.0.261"
setuptools = "^67.6.1"
streamlit = "^1.24"
supabase = "^1.0.3"
tiktoken = "^0.4.0"
types-pyyaml = "^6.0.12.9"
upstash-redis = "^0.15.0"
websockets = ">=10.3,<11.0"
wikipedia = "^1.4.0"
dotenv = "^0.0.5"
